[package]
name = "med_timer_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
med_timer_shared = { path = "../med_timer_shared" }
log = "0.4"
env_logger = "0.9"
actix-web = "3"
actix-rt = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = [ "v4", "serde" ] }
anyhow = "1.0"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "sqlite", "runtime-actix-rustls"]