[package]
name = "med_timer_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
med_timer_shared = { path = "../med_timer_shared" }
log = "0.4"
env_logger = "0.9"
actix-web = "3"
actix-rt = "2.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = [ "v4", "serde" ] }

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "sqlite", "runtime-async-std-rustls"]

[dependencies.paperclip]
git = "https://github.com/wafflespeanut/paperclip" 
features = ["actix3-nightly", "v2"]